@@ -240,6 +240,7 @@ Martin1234
 Toerless Eckert
   for converting suspend.dat into proper PES format
   for investigating and fixing problems caused by filter streaming
+  for fixing TimedWrite() so it doesn't fail after a slow but successful write
 
 Tomasz Maciej Nowak
   for providing Polish language texts
